--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Coursera!</title>
   </head>
   <body>
-    <h1>Hello Coursera Yo! Thrilled to be here yo!</h1>
+    <h1>Hello Coursera Yo! Thrilled to be here man!</h1>
   </body>
 </html>
